// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot 1`] = `
<Header
  backgroundColor="#0084F8"
  icon="left-arrow"
  isHeadingVisible={true}
  onIconPress={[MockFunction]}
>
  <View
    style={
      Object {
        "backgroundColor": "#0084F8",
        "height": 20,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#0084F8",
          "height": 20,
        }
      }
    >
      <StatusBar
        animated={false}
        backgroundColor="#0084F8"
        barStyle="light-content"
        showHideTransition="fade"
        translucent={true}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "backgroundColor": "#0084F8",
        "flex": 0,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "padding": 15,
        "paddingTop": 30,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#0084F8",
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "padding": 15,
          "paddingTop": 30,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#4C5F72"
        name="left-arrow"
        onPress={[MockFunction]}
        size={22}
        style={
          Array [
            Object {
              "flex": 2,
            },
            undefined,
          ]
        }
      >
        <Text
          allowFontScaling={false}
          onPress={[MockFunction]}
          style={
            Array [
              Object {
                "color": "#4C5F72",
                "fontSize": 22,
              },
              Array [
                Object {
                  "flex": 2,
                },
                undefined,
              ],
              Object {
                "fontFamily": "icomoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          <Text
            allowFontScaling={false}
            onPress={[MockFunction]}
            style={
              Array [
                Object {
                  "color": "#4C5F72",
                  "fontSize": 22,
                },
                Array [
                  Object {
                    "flex": 2,
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </Text>
      </Icon>
      <Text
        style={
          Array [
            Object {
              "flex": 3,
            },
            Object {},
          ]
        }
        textType="semiBold"
        type="small"
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "left",
              },
              Object {
                "fontFamily": "OpenSans-SemiBold",
                "fontWeight": "600",
              },
              Array [
                Object {
                  "flex": 3,
                },
                Object {},
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                  "textAlign": "left",
                },
                Object {
                  "fontFamily": "OpenSans-SemiBold",
                  "fontWeight": "600",
                },
                Array [
                  Object {
                    "flex": 3,
                  },
                  Object {},
                ],
              ]
            }
          />
        </Text>
      </Text>
    </View>
  </View>
</Header>
`;

exports[`Header should match snapshot without title 1`] = `
<Header
  backgroundColor="#0084F8"
  icon="left-arrow"
  isHeadingVisible={true}
  onIconPress={[MockFunction]}
  title="Header"
>
  <View
    style={
      Object {
        "backgroundColor": "#0084F8",
        "height": 20,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#0084F8",
          "height": 20,
        }
      }
    >
      <StatusBar
        animated={false}
        backgroundColor="#0084F8"
        barStyle="light-content"
        showHideTransition="fade"
        translucent={true}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "backgroundColor": "#0084F8",
        "flex": 0,
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "padding": 15,
        "paddingTop": 30,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#0084F8",
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "padding": 15,
          "paddingTop": 30,
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#4C5F72"
        name="left-arrow"
        onPress={[MockFunction]}
        size={22}
        style={
          Array [
            Object {
              "flex": 2,
            },
            undefined,
          ]
        }
      >
        <Text
          allowFontScaling={false}
          onPress={[MockFunction]}
          style={
            Array [
              Object {
                "color": "#4C5F72",
                "fontSize": 22,
              },
              Array [
                Object {
                  "flex": 2,
                },
                undefined,
              ],
              Object {
                "fontFamily": "icomoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          <Text
            allowFontScaling={false}
            onPress={[MockFunction]}
            style={
              Array [
                Object {
                  "color": "#4C5F72",
                  "fontSize": 22,
                },
                Array [
                  Object {
                    "flex": 2,
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </Text>
      </Icon>
      <Text
        style={
          Array [
            Object {
              "flex": 3,
            },
            Object {},
          ]
        }
        textType="semiBold"
        type="small"
      >
        <Text
          style={
            Array [
              Object {
                "fontSize": 16,
                "lineHeight": 24,
                "textAlign": "left",
              },
              Object {
                "fontFamily": "OpenSans-SemiBold",
                "fontWeight": "600",
              },
              Array [
                Object {
                  "flex": 3,
                },
                Object {},
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                  "textAlign": "left",
                },
                Object {
                  "fontFamily": "OpenSans-SemiBold",
                  "fontWeight": "600",
                },
                Array [
                  Object {
                    "flex": 3,
                  },
                  Object {},
                ],
              ]
            }
          >
            Header
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</Header>
`;
